--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,3 +5,26 @@
 body {
     @apply font-sans;
 }
+
+@layer utilities {
+    .no-scrollbar {
+        scrollbar-width: none;
+        -ms-overflow-style: none;
+    }
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+    .thin-scrollbar::-webkit-scrollbar {
+        width: 4px;
+    }
+    .thin-scrollbar::-webkit-scrollbar-thumb {
+        background-color: #cbcbcb;
+        border-radius: 4px;
+    }
+    .thin-scrollbar::-webkit-scrollbar-thumb:hover {
+        background-color: #b8b8b8;
+    }
+    .thin-scrollbar::-webkit-scrollbar-track {
+        background: #f1f1f1;
+    }
+}
